--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
             <img src="./img/prueba.jpeg" class="img-thumbnail" style="width:300px;height:300px">
         </div>
         <div class="container d-flex flex-column align-items-center justify-content-center">
+            <h1>Este es mi Proyecto Final del CursoGit del CD </h1>
             <!-- En el siguiente parrafo escribir su nombre. Ejemplo:  <p>Hola, soy Adrián 😛</p>-->
             <p class="display-6">Hola, soy Bryan</p>
             <!-- Añadir lo que les guste hacer en el siguiente parrafo. Ejemplo: <p>Me gusta jugar videojuegos 🕹</p> -->
             <p class="display-6">Me gusta jugar videojuegos</p>
+            
         </div>
     </div>
 </body>
